src/test/ui/span/vec-must-not-hide-type-from-dropck.stderr
error[E0597]: `c2` does not live long enough
  --> $DIR/vec-must-not-hide-type-from-dropck.rs:117:25
   |
LL |     c1.v[0].v.set(Some(&c2));
   |                         ^^ borrowed value does not live long enough
...
LL | }
   | - `c2` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c1` does not live long enough
  --> $DIR/vec-must-not-hide-type-from-dropck.rs:119:25
   |
LL |     c2.v[0].v.set(Some(&c1));
   |                         ^^ borrowed value does not live long enough
LL |     //~^ ERROR `c1` does not live long enough
LL | }
   | - `c1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
